css/style.css
/* Global css */

:root {
  --primary-bg: #1A0B2E;          
  --secondary-bg: #351165;       
  --primary-text: #ffffff;        
  --secondary-text: #D1CFD8;     
  --highlight: #00FF88;           
  --accent-gradient: linear-gradient(
    25deg, 
    #F7E93F 8%, 
    #FB09B4 51%, 
    #9100F8 100%
  );
  --accent-gradient-hover: linear-gradient(
    45deg, 
    #F7E93F 0%, 
    #FB09B4 51%, 
    #9100F8 100%
  );

  --button-text: #ffffff;
}

body{
  color: #fff;
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
}
p{
  color: var(--secondary-text);
  font-size: 16px;
  line-height: 24px;
}
h2{
  font-size: 48px;
  line-height: 58px; 
  font-weight: 700;
  margin-bottom: 40px;
}
h3 {
    font-size: 24px;
    font-weight: 700;
    line-height: 32px;
}
.primary-btn,.secondary-btn{
  font-size: 16px;
  font-weight: 500;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;

}
.primary-btn{
  padding: 12px 20px;
  background: var(--accent-gradient);
  border-radius: 100px;
  color: #fff;
  cursor:pointer;
  transition: all .3s ease;
}
.primary-btn:hover{
  background: var(--accent-gradient-hover);
}

.secondary-btn{
  padding: 12px 20px;
  background: transparent;
  border-radius: 100px;
  color: var(--highlight);
  font-weight: 500;
  border: 1px solid var(--highlight);
  cursor:pointer;
  transition: all .3s ease;
}
button.secondary-btn:hover {
    background: #00fd081f;
}
.container{
  /*max hobe 1200, width: 75%; */
  max-width: 1200px;
  margin: 0 auto;
}
/* Global css end */







/* ========== about ========== */
#about {
  padding: 50px 0 120px 0;
  background: #1a0c30;
}
#about .podcast-section {
  padding: 80px 20px;
  text-align: center;
}

#about h2 {
  font-size: 48px;
  margin-bottom: 20px;
}

#about .join-txt {
  padding: 40px 0 80px 0;
}

.divider {
  border: 0;
  height: 1px;
  background: #ffffff1a;
  margin-bottom: 60px;
}

.about-numbers {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 30px;
}

.about-number {
  display: block;
  font-size: 48px;
  line-height: 56px;
  font-weight: 900;
  color: var(--highlight);
  margin-bottom: 16px;
}

.number-subdead {
  font-size: 16px;
  line-height: 20px;
  color: var(--secondary-text);
  text-transform: uppercase;
}
/* ========== about end ========== */

/* ========== why-choose ========== */
#why-choose-card {
  background: #230e3d;
}
#why-choose-card h2 {
  text-align: center;
  margin-bottom: 40px;
  background: #230e3d;
}

.why-choose-card-item {
  background: #2a0f4d;
  border-radius: 40px;
  padding: 40px;
  transition: transform 0.3s ease;
}

.why-choose-card-item:hover {
  transform: translateY(-5px);
  background: var(--primary-bg);
}

.why-choose-card-item img {
  width: 50px;
  height: 50px;
  object-fit: contain;
  margin-bottom: 16px;
}

.why-choose-card-item h3 {
  font-size: 24px;
  font-weight: 700;
  line-height: 32px;
  margin-bottom: 16px;
}

/* ========== why-choose end ========== */

.hamburger {
  display: none;
}

#header {
  border-bottom: 1px solid #412567;
  background: var(--primary-bg);
}

#header .nav-menu a {
  color: var(--primary-text);
}
#header .nav-menu a:hover {
  color: var(--secondary-text);
}

#hero-banner {
  background-image: url("../assets/hero-bg.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.wave-center-circle-mic img {
  width: 100%;
  max-width: 116px;
}
.wave-center-circle-mic {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
  border: 8px solid #2a186c;
  width: 350px;
  height: 350px;
  background: var(--accent-gradient);
}
.mic {
  display: flex;
  justify-content: center;
}
.mic h4 {
  font-size: 18px;
  padding: 8px 16px;
  border-radius: 100px;
  position: absolute;
  color: #1a0b2e;
  background: var(--highlight);
  box-shadow: 0px 3px 27px 0px #00ff8880;
  transform: translate(115px, 10px);
}
.banner-content h1 {
  font-size: 60px;
  padding: 40px 0 8px 0;
}
.banner-content span {
  font-size: 16px;
  line-height: 24px;
  color: var(--secondary-text);
}

#hero-banner .banner-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;
  padding-top: 24px;
  flex-wrap: wrap;
}

/* featured section */
#featured_card {
  background: var(--primary-bg);
}
.featured_card_item {
  background: #250d44;
  border-radius: 30px;
  overflow: hidden;
}
.featured_title_description {
  padding: 24px;
}
.featured_title_description h3,
.featured_title_description p {
  margin-bottom: 12px;
}
.featured_title_description .featured_time {
  align-items: center;
  gap: 6px;
  color: #00ff88;
}
.featured_card_item .video iframe {
  width: 100%;
  height: 214px;
}
.featured_card_item {
  max-width: 440px;
}
/* featured end */

/* host section */
#host-section {
  /* padding-bottom: 120px; */
  background: var(--primary-bg);
}

.host-card {
  background-color: #250e44; /* Card purple */
  border-radius: 40px;
  padding: 40px;
  display: flex;
  align-items: center;
  gap: 24px;
  text-align: left;
}

.host-img img {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  object-fit: cover;
}

.host-info {
  flex: 1;
}

.host-name {
  font-size: 32px;
  line-height: 39px;
  margin: 0 0 15px 0;
}

.host-bio {
  margin-bottom: 16px;
}

.social-icons {
  display: flex;
  gap: 12px;
}

.icon {
  width: 40px;
  height: 40px;
  border: 1px solid #533c72;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: background 0.3s;
}

.icon:hover {
  background: var(--button-text);
}
/* host section end */

/* techwave-footer */
.techwave-footer {
  background-color: #230e3d;
  background-image: url("/footer-bg.png");
  background-size: unset;
  background-repeat: repeat-x;
  background-position: center;
  color: #fff;
}

.footer-social {
  padding: 32px 0;
}
.footer-social .footer-social-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 25px;
  max-width: 544px;
  margin: 0 auto;
}

.footer-social .footer-social-wrapper a {
  color: #b0a8c3;
  text-decoration: none;
  display: flex;
  align-items: center;
  gap: 8px;
  transition: color 0.3s ease;
}

.footer-social a:hover {
  color: #ffffff;
}

.footer-brand-logo img {
  text-align: center;
  margin: 0 auto;
  padding-top: 22px;
}
.footer-social-wrapper a i {
  color: #fff;
}
.footer-copyright,
.footer-social-wrapper {
  font-size: 16px !important;
}
/* techwave-footer end*/

/* some common style */
div#featured_card,
footer.techwave-footer,
div#why-choose-card {
  padding: 120px 0 !important;
}

section#host-section {
  padding-bottom: 120px;
}









/* ---Res. Mobile Devices (max-width: 576px) --- */
@media (max-width: 576px) {
/* common */
.container{
  width: 100%;
  padding: 20px;
}
h2{
  font-size: 32px !important;
  line-height: 39px;
}
h3 {
    font-size: 22px;
    font-weight: 700;
    line-height: 30px;
}
/* some common style */
div#featured_card,div#why-choose-card{
    padding: 40px 0 !important;
}
footer.techwave-footer{
  padding: 20px 0 !important;
  background-size: cover;
}
    .inner-footer {
        max-width: 255px;
        margin: 0 auto;
    }

.footer-social{
  padding: 24px;
}
.footer-social .footer-social-wrapper{
  gap: 8px;
}

section#host-section {
    padding-bottom: 40px;
}
/* common end */

#hero-banner {
    background-position: 50% 80%;
    background-size: 155% 117%;
}

div#hero-banner {
    padding: 20px 0px;
}

.wave-center-circle-mic img {
    width: 80px;
}

#about{
  padding: 20px 0;
}

  #header nav {
    width: 100%;
    padding: 20px;
  }

  .hamburger {
    display: block !important;
  }

  .hamburger img {
    max-width: 137px;
  }

  .nav-btn, 
  .nav-menu ul {
    display: none;
  }

  .banner-content h1 {
    font-size: 40px;
    line-height: 48px;
  }

  .wave-center-circle-mic {
    width: 200px;
    height: 200px;
  }


  .mic h4 {
    font-size: 16px;
    transform: translate(86px, 10px);
  }

  /* .why-choose */
  .why-choose-card-item{
    padding: 24px;
  }
  .why-choose-card-item:nth-child(1),
  .why-choose-card-item:nth-child(2),
  .why-choose-card-item:nth-child(3),
  .why-choose-card-item:nth-child(4) {
    grid-row: unset;
    grid-column: unset;
}
.why-choose-card-items {
  grid-template-columns: repeat(1, 1fr);
}
.why-choose-card-item h3 {
    font-size: 22px !important;
}
.featured_card_items {
  grid-template-columns: repeat(1, 1fr);
  justify-items: center;
}
.host-card {
    flex-direction: column;
    text-align: center;
}
.social-icons{
  justify-content: center;
}
.host-name {
  font-size: 24px;
  line-height: 32px;
}
.about-numbers {
    display: grid;
    grid-template-columns: repeat(2,1fr);
}
  .about-numbers .about-number {
    font-size: 40px;
}
}







/* --- Medium Devices (577px to 992px) --- */
@media (min-width: 577px) and (max-width: 992px) {
  /* common */
  .container {
    width: 100%;
    padding: 20px;
  }

  /* some common style */
  div#featured_card,
  div#why-choose-card {
    padding: 40px 0 !important;
  }
  footer.techwave-footer {
    padding: 20px 0 !important;
  }
  footer.techwave-footer {
    background-size: contain !important;
  }
  .inner-footer {
    max-width: 255px;
    margin: 0 auto;
  }
  .footer-social .footer-social-wrapper {
    gap: 8px;
  }
  .footer-brand-logo img {
    padding-top: 20px;
  }
  section#host-section {
    padding-bottom: 40px;
  }
  .about-numbers {
    display: grid !important;
    grid-template-columns: repeat(2,1fr) !important;
}
  .about-numbers .about-number {
    font-size: 40px;
}

  /* common end */

  #hero-banner {
    background-position: 50%;
  }
  #header nav {
    width: 100%;
    padding: 20px;
  }
  .nav-logo img {
    max-width: 140px;
  }
  .why-choose-card-item:nth-child(1),
  .why-choose-card-item:nth-child(2),
  .why-choose-card-item:nth-child(3),
  .why-choose-card-item:nth-child(4) {
    grid-row: unset;
    grid-column: unset;
  }
  .featured_card_items {
    grid-template-columns: repeat(2, minmax(0, 1fr));
    justify-items: center;
  }
  .about-numbers {
    display: grid;
    grid-template-columns: repeat(2,1fr);
}
  .about-numbers .about-number {
    font-size: 40px;
}

  .techwave-footer {
    background-size: cover;
    background-repeat: repeat-x;
  }
}

/* --- Large Devices (min-width: 993px) --- */
@media (min-width: 993px) {
  .container {
    padding-left: 20px;
    padding-right: 20px;
  }
}



  .wave-center-circle-mic img {
    cursor: pointer;
    transition: transform 0.3s ease-in-out;
  }
.wave-center-circle-mic:hover img {
    transform: scale(1.06) !important;
}

